 - Added a new floor to the Abandoned North Mine.
 - Added lots of new crafting recipes for items both old and new.
 - Added a ton of new animations for skills, items, and more.
 - Added many new custom state overlays.
 - Added a new and unique fishing system.
 - Added roaming Giant Rats in the Dark Forest.
 - Added 4 new dungeons!
 - Added 13 new player skills:
  ~ Player 1, 2 skills:
   > Heavenswield: Magic skill learned at level 20 (replaces Bide).
   > [P] Steadfast: Passive skill learned at level 24.
  ~ Player 2, 3 skills:
   > Ice II: Magic skill learnable at level 20 via the skill learn menu.
   > Blood Boost: Magic skill learned at level 22. (This was once Player 3's skill. She can no longer learn it. It will be removed when transferring a save from Alpha 14.)
   > Magical Breeze: Magic skill learned at level 23.
  ~ Player 3, 5 skills:
   > Dispell: Magic skill learnable at level 15 via the skill learn menu.
   > Group Heal: Magic skill learned at level 17 (replaces Blood Boost).
   > Curify: Magic skill learned at level 22.
   > [P] Clear Mind: Passive skill learned at level 23.
   > Resurgence: Magic skill learned at level 25.
  ~ Player 4, 1 skills:
   > Focus Up: Special skill learned at level 22.
  ~ Tomes, 3 skills:
   > Dark Orb
   > Ice II
   > Wyvern's Fury
 - Added 67 new items:
  ~ 7 recovery/buff items:
   > Large Potion
   > Large Elixir
   > Water Jug
   > Dispel Potion
   > Stimulant
   > Vicious Root
   > Tomato
  ~ 27 materials:
   > Malicious Essence
   > Shadowspec Ingot
   > Blank Tome
   > Feral Bat Wing
   > Thick-Skinned Herb
   > Turtle Scute
   > Medicinal Herb
   > Medicinal Root
   > Raw Truffle
   > Web Ball
   > Tarantula Silk
   > Vial of Poison
   > Petrified Wood
   > Dragon Scale
   > Enchanted Dragon Scale
   > Icy Gel
   > Ice Cube
   > Frozen Core
   > Tellurium Dust
   > Tellurium Alloy
   > Life Crystal
   > Mana Crystal
   > Mysterious Yellow Badge
   > Knight Token
   > Mage Token
   > Cleric Token
   > Rogue Token