@@ -3299,6 +3299,11 @@
         "level": 22,
         "note": "Alpha 15",
         "skillId": 122
+      },
+      {
+        "level": 24,
+        "note": "Alpha 15",
+        "skillId": 123
       }
     ],
     "name": "Rogue",
