@@ -4284,5 +4284,35 @@
     "successRate": 100,
     "tpCost": 0,
     "tpGain": 0
+  },
+  {
+    "id": 123,
+    "animationId": 0,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "[PASSIVE SKILL]\nYour chance of landing a hit is increased by 5%.",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 12,
+    "message1": "",
+    "message2": "",
+    "mpCost": 0,
+    "name": "[P] Master Rogue II",
+    "note": "<Passive State: 99>\n<Hide in Battle>\n\n<Custom Cost Display>\n\\}Passive\n</Custom Cost Display>\n\n<Max Mastery Level: 0>",
+    "occasion": 3,
+    "repeats": 1,
+    "requiredWtypeId1": 0,
+    "requiredWtypeId2": 0,
+    "scope": 1,
+    "speed": 0,
+    "stypeId": 3,
+    "successRate": 100,
+    "tpCost": 0,
+    "tpGain": 0
   }
 ]
