@@ -16,7 +16,7 @@ Additions:
  - Added a new and unique fishing system.
  - Added roaming Giant Rats in the Dark Forest.
  - Added 4 new dungeons!
- - Added 13 new player skills:
+ - Added 14 new player skills:
   ~ Player 1, 2 skills:
    > Heavenswield: Magic skill learned at level 20 (replaces Bide).
    > [P] Steadfast: Passive skill learned at level 24.
@@ -30,8 +30,9 @@ Additions:
    > Curify: Magic skill learned at level 22.
    > [P] Clear Mind: Passive skill learned at level 23.
    > Resurgence: Magic skill learned at level 25.
-  ~ Player 4, 1 skills:
+  ~ Player 4, 2 skills:
    > Focus Up: Special skill learned at level 22.
+   > [P] Master Rogue II: Passive skill learned at level 24.
   ~ Tomes, 3 skills:
    > Dark Orb
    > Ice II
